RESOLVED FIXED60480
capture event fix
https://bugs.webkit.org/show_bug.cgi?id=60480
Summary capture event fix
Robin Dunn
Reported 2011-05-09 11:01:24 PDT
Created attachment 92805 [details] capture_event.patch patch for adding an empty capture lost handler needed to avoid the ReleaseMouse assert on wxMSW.
Attachments
capture_event.patch (1.84 KB, patch)
2011-05-09 11:01 PDT, Robin Dunn
kevino: review+
kevino: commit-queue-
Kevin Ollivier
Comment 1 2011-05-09 11:15:24 PDT
Landed in r86068, thanks!
Note You need to log in before you can comment on or make changes to this bug.