Reviewed by Kevin Ollivier.

Create empty event handler to avoid new mouse capture assert added in wx 2.9 on wxMSW.

https://bugs.webkit.org/show_bug.cgi?id=60480


Canonical link: https://commits.webkit.org/75741@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86068 268f45cc-cd09-0410-ab3c-d52691b4dbfc